; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_mesh_sync.c_mesh_sync_offset_adjust_tbtt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_mesh_sync.c_mesh_sync_offset_adjust_tbtt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_sub_if_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.ieee80211_if_mesh }
%struct.ieee80211_if_mesh = type { i64, i64, i32, i32, i32 }

@IEEE80211_SYNC_METHOD_NEIGHBOR_OFFSET = common dso_local global i64 0, align 8
@TOFFSET_MINIMUM_ADJUSTMENT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [61 x i8] c"TBTT : kicking off TBTT adjustment with clockdrift_max=%lld\0A\00", align 1
@MESH_WORK_DRIFT_ADJUST = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [49 x i8] c"TBTT : max clockdrift=%lld; too small to adjust\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_sub_if_data*)* @mesh_sync_offset_adjust_tbtt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mesh_sync_offset_adjust_tbtt(%struct.ieee80211_sub_if_data* %0) #0 {
  %2 = alloca %struct.ieee80211_sub_if_data*, align 8
  %3 = alloca %struct.ieee80211_if_mesh*, align 8
  store %struct.ieee80211_sub_if_data* %0, %struct.ieee80211_sub_if_data** %2, align 8
  %4 = load %struct.ieee80211_sub_if_data*, %struct.ieee80211_sub_if_data** %2, align 8
  %5 = getelementptr inbounds %struct.ieee80211_sub_if_data, %struct.ieee80211_sub_if_data* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store %struct.ieee80211_if_mesh* %6, %struct.ieee80211_if_mesh** %3, align 8
  %7 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %8 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @IEEE80211_SYNC_METHOD_NEIGHBOR_OFFSET, align 8
  %11 = icmp ne i64 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @WARN_ON(i32 %12)
  %14 = call i32 (...) @rcu_read_lock_held()
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  %18 = call i32 @BUG_ON(i32 %17)
  %19 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %20 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %19, i32 0, i32 3
  %21 = call i32 @spin_lock_bh(i32* %20)
  %22 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %23 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @TOFFSET_MINIMUM_ADJUSTMENT, align 8
  %26 = icmp sgt i64 %24, %25
  br i1 %26, label %27, label %39

27:                                               ; preds = %1
  %28 = load %struct.ieee80211_sub_if_data*, %struct.ieee80211_sub_if_data** %2, align 8
  %29 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %30 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = call i32 @msync_dbg(%struct.ieee80211_sub_if_data* %28, i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str, i64 0, i64 0), i64 %31)
  %33 = load i32, i32* @MESH_WORK_DRIFT_ADJUST, align 4
  %34 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %35 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %34, i32 0, i32 4
  %36 = call i32 @set_bit(i32 %33, i32* %35)
  %37 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %38 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %37, i32 0, i32 2
  store i32 1, i32* %38, align 8
  br label %49

39:                                               ; preds = %1
  %40 = load %struct.ieee80211_sub_if_data*, %struct.ieee80211_sub_if_data** %2, align 8
  %41 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %42 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %41, i32 0, i32 1
  %43 = load i64, i64* %42, align 8
  %44 = call i32 @msync_dbg(%struct.ieee80211_sub_if_data* %40, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0), i64 %43)
  %45 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %46 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %45, i32 0, i32 1
  store i64 0, i64* %46, align 8
  %47 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %48 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %47, i32 0, i32 2
  store i32 0, i32* %48, align 8
  br label %49

49:                                               ; preds = %39, %27
  %50 = load %struct.ieee80211_if_mesh*, %struct.ieee80211_if_mesh** %3, align 8
  %51 = getelementptr inbounds %struct.ieee80211_if_mesh, %struct.ieee80211_if_mesh* %50, i32 0, i32 3
  %52 = call i32 @spin_unlock_bh(i32* %51)
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @rcu_read_lock_held(...) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @msync_dbg(%struct.ieee80211_sub_if_data*, i8*, i64) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
